<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/StateLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CommandsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/DemoLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/DemoButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.01"
                android:text="@string/demo" />

            <Button
                android:id="@+id/TestsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/tests" />

            <Switch
                android:id="@+id/switchBinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:text="@string/switchBinary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ShiftLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/LeftArrowButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/flechegauche" />

            <Button
                android:id="@+id/UpArrowButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/flechehaut" />

            <Button
                android:id="@+id/RightArrowButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/flechedroit" />

            <Button
                android:id="@+id/DownArrowButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/flechebas" />

            <Button
                android:id="@+id/ClearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cleardisplay" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ShiftValueXText"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:text="@string/ValueX"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/ShiftValueYText"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"
                    android:text="@string/ValueY"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/GraphicsLinearView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/X0Value"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/X0DefaultValue" />

                <EditText
                    android:id="@+id/X1Value"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/X1DefaultValue" />

                <EditText
                    android:id="@+id/ColorValue"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/ColorDefaultValue" />

                <EditText
                    android:id="@+id/RadiusValue"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/RadiusDefaultValue" />

                <TextView
                    android:id="@+id/ColorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Color" />

                <TextView
                    android:id="@+id/X1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/X1" />

                <TextView
                    android:id="@+id/RadiusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Radius" />

                <TextView
                    android:id="@+id/X0Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/X0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Y0Value"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/Y0DefaultValue" />

                <EditText
                    android:id="@+id/Y1Value"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/Y1DefaultValue" />

                <EditText
                    android:id="@+id/FontValue"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/FontDefaultValue" />

                <EditText
                    android:id="@+id/DirectionValue"
                    android:layout_width="60dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@string/DirectionDefaultValue" />

                <TextView
                    android:id="@+id/fontText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/font" />

                <TextView
                    android:id="@+id/y1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Y1" />

                <TextView
                    android:id="@+id/directionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Direction" />

                <TextView
                    android:id="@+id/Y0Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Y0" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:scrollbarStyle="outsideOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/PointButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/point" />

                    <Button
                        android:id="@+id/LineButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/line" />

                    <Button
                        android:id="@+id/RectangleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rectangle" />

                    <Button
                        android:id="@+id/FillRectangleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fillrectangle" />

                    <Button
                        android:id="@+id/CircleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/circle" />

                    <Button
                        android:id="@+id/FilledCircleButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/filledcircle" />

                    <Button
                        android:id="@+id/StreamingButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/streamingbitmap" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/TextValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/Numversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>
